# Nerdex

./: .gitignore  AGENTS.md  LICENSE  docker-compose.yaml
server/: .dockerignore  .env.example  AGENTS.md  Dockerfile  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 2025_03_27_2031-c98896edf2f2_add_users_table.py  2025_03_27_2040-ab61424177af_add_pg_trgm_extension.py  2025_04_01_1756-7d826032fd50_add_posts_table.py  2025_04_08_0704-15b2499910f2_add_user_reactions_to_posts.py  2025_04_28_1030-45ccd6afa3d3_add_sessions_table.py  2025_05_20_1246-5b1228e0cb86_add_chats_messages_and_events_tables.py  2025_05_20_1415-2e6c89f8995c_add_user_subsctiptions.py  2026_03_09_1200-9f3b4c2d1a0e_refactor_posts_into_content.py  2026_03_09_1600-3c4d5e6f7a8b_reduce_post_max_length_to_2048.py  2026_03_10_1200-b7a1c2d3e4f5_add_tags_tables.py  2026_03_11_2200-d2c3b4a5f6e7_add_comments_tables.py  2026_03_12_1400-e7f8a9b0c1d2_rework_comment_reply_model.py  2026_03_13_1200-a1b2c3d4e5f6_add_assets_foundation.py  2026_03_21_1300-b4c5d6e7f8a9_add_users_avatar_crop.py  2026_03_28_1200-c6d7e8f9a0b1_add_post_attachment_roles.py  2026_04_19_1200-f1a2b3c4d5e6_add_article_details_table.py  2026_05_04_1200-8d0a1b2c3d4e_add_video_publishing_stage_1.py  2026_05_06_1200-1a2b3c4d5e6f_add_content_views_and_sessions.py  2026_05_06_1500-7c8d9e0f1a2b_add_moments.py  2026_05_11_1200-2b3c4d5e6f7a_add_message_client_message_id.py  (+14 more)
server/certs/: private.pem  public.pem
server/src/: config.py  database.py  exc_handlers.py  main.py  schemas.py  setup_app.py
server/tests/: conftest.py
(+541 files in other folders)
